# SVF

./: .gitignore  CMakeLists.txt
include/Graphs/: SVFG.h  SVFGNode.h  SVFGStat.h  VFGEdge.h  VFGNode.h
include/MSSA/: MSSAMuChi.h  MemRegion.h  MemSSA.h
include/SABER/: SrcSnkDDA.h  UninitChecker.h
include/Util/: CFLSolver.h  Options.h  SVFUtil.h
include/WPA/: FlowSensitive.h
lib/Graphs/: ConsG.cpp  ICFG.cpp  OfflineConsG.cpp  PAG.cpp  PTACallGraph.cpp  SVFG.cpp  SVFGStat.cpp  VFG.cpp
lib/MSSA/: MemRegion.cpp  MemSSA.cpp
lib/MTA/: TCT.cpp
lib/SABER/: ProgSlice.cpp  SaberAnnotator.cpp  SrcSnkDDA.cpp  UninitChecker.cpp
lib/SVF-FE/: CHG.cpp  LLVMUtil.cpp
lib/Util/: Options.cpp  PathCondAllocator.cpp  SVFUtil.cpp
lib/WPA/: FlowSensitive.cpp  FlowSensitiveStat.cpp  VersionedFlowSensitiveStat.cpp
tools/SABER/: saber.cpp
tools/Uninit/: CMakeLists.txt  uninit.cpp
